# agentic-investment-firm

./: .dockerignore  .gitignore  README.md  docker-compose.yml
server/: .env.example  Dockerfile  README.md  pyproject.toml
server/app/: config.py  db.py  main.py
server/app/agents/: day_review.py  pm.py  query_gen.py  relevance_critic.py  reporting.py  research.py  risk.py  schemas.py
server/app/api/: admin.py  approvals.py  datasets.py  export.py  feed.py  health.py  observability.py  portfolio.py  reports.py  run.py  stream.py
server/app/data/: catalog.py  dataset_stats.py  demo_dataset.py  price_feed.py  prices.py
server/app/firm/: clock.py  dispatcher.py  hitl.py  memory.py  monitor.py  pipeline.py  runner.py
server/app/guardrails/: budget.py  citations.py  injection.py  lookahead.py  risk_engine.py
server/app/llm/: base.py  factory.py  pricing.py  router.py
server/app/models/: __init__.py  approval.py  corpus.py  dataset.py  portfolio.py  span.py  ticker_memory.py
server/app/obs/: spans.py  (+1 more)
server/eval/: harness.py  provider.py  scenarios.py
server/scripts/: generate_sample_run.py
server/tests/: conftest.py  test_broker.py  test_clock_dispatch.py  test_corpus.py  test_crag.py  test_dataset_stats.py  test_demo_day.py  test_eval.py  test_guardrails.py  test_health.py  test_hitl_pause.py  test_incremental_paths.py  test_llm_router.py  test_pipeline_e2e.py  test_pm.py  test_price_move_and_context.py  test_prices.py  test_rag_sprint.py  test_reconcile.py  test_reports_obs.py  test_research.py  test_risk_hitl.py  test_spans.py  test_stream.py
(+420 files in other folders)
