[project]
name = "agentic-investment-firm"
version = "0.1.0"
description = "Multi-agent paper-trading investment firm"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "yfinance>=0.2.40",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
rag = [
    "chromadb>=0.5",
    "voyageai>=0.2",
    "httpx>=0.27",
]
llm = [
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
